# chat_system

./: .env.example  .flake8  .gitignore  =2.31.0  ADVANCED_FEATURES.md  AI_INTEGRATION.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  BASIC_USAGE.md  CHANGELOG.md  CHANGES.md  CI_CD_SETUP.md  CODE_ANALYSIS.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOKUMENTATION_DE.md  DOKUMENTATION_KORREKTUR.md  DONE.md  Dockerfile  ELYZA_IMPLEMENTATION_SUMMARY.md  FEATURE_FLAGS.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  ISSUES.md  ISSUES_BACKUP.md  ISSUES_RESOLVED.md  KNOWLEDGE_DATABASE.md  MAINTENANCE_SUMMARY.md  MIGRATION_NOTES.md  Makefile  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  README_DE.md  RELEASE_NOTES.md  (+20 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agents/: __init__.py
agents/core/: __init__.py  base_agent.py  messaging.py  orchestrator.py  registry.py
agents/examples/: __init__.py  dialog_agent.py  retrieval_agent.py  tool_agent.py
analytics/: __init__.py  ab_testing.py  event_collector.py
config/: database_config.py  settings.py  validation.py
core/: auth.py  dependencies.py  error_handlers.py  sentry_config.py
database/: connection.py  db_manager.py  models.py  performance_monitor.py  repositories.py
database/adapters/: __init__.py  base_adapter.py  mongodb_adapter.py  postgres_adapter.py  sqlite_adapter.py
database/migrations/: add_performance_indexes.py  add_search_indexes.py
docs/: API.md  API_EXTENSIONS.md  CONFIGURATION_GUIDE.md  DATABASE_READ_REPLICAS.md  DEPENDENCY_INJECTION_GUIDE.md  DEPLOYMENT_AUTOMATION.md  DISTRIBUTED_TRACING.md  ELYZA_EVOLUTIONARY_PLAYGROUND.md  ELYZA_MODEL.md  ERROR_HANDLING_GUIDE.md  EVENT_SOURCING.md  GRAFANA_DASHBOARDS.md  GRAPHQL_API.md  GRPC_SERVICES.md  IMPLEMENTATION_STATUS.md  INTEGRATIONS_GUIDE.md  MULTI_TENANCY.md  OBJECT_STORAGE.md  PERFORMANCE.md  PLANNED_FEATURES.md  PLUGIN_SYSTEM.md  README.md  README_config-settings.md  README_routes-chat.md  README_routes-messages.md  README_static-css-style.md  README_templates-index.md  README_websocket-handlers.md  REDIS_SCALING.md  SECURITY_ENHANCEMENTS.md  SERVICE_CONSOLIDATION_ANALYSIS.md  SETUP_MONITORING_PERFORMANCE.md  TESTING_STRATEGY.md  VOICE_PROCESSING.md  WORK_SUMMARY.md
docs/01-getting-started/: README.md  configuration.md  installation.md  quick-start.md
docs/02-user-guide/: README.md
docs/03-developer-guide/: IMPLEMENTATION_NOTES.md  README.md  TESTING_GUIDE.md
docs/04-api-reference/: API_EXAMPLES.md  README.md
docs/05-architecture/: README.md
docs/06-operations/: MONITORING.md  README.md  SECURITY_ENHANCEMENTS.md  TROUBLESHOOTING.md
docs/07-contributing/: README.md
docs/08-reference/: INTEGRATIONS.md  README.md  WORKFLOW_AUTOMATION.md
docs/adr/: ADR-000-template.md  ADR-001-fastapi-framework.md  ADR-002-sqlalchemy-orm.md  ADR-003-jwt-authentication.md  ADR-006-plugin-sandbox-architecture.md  ADR-008-performance-optimization-strategy.md  ADR-009-security-enhancement-strategy.md  ADR-010-dependency-injection-pattern.md  ADR-011-service-consolidation-strategy.md  ADR-012-error-handling-centralization.md  ADR-013-database-read-replicas.md  ADR-014-graphql-api-strategy.md  ADR-015-grpc-service-communication.md  ADR-016-event-sourcing-audit-trail.md  ADR-017-multi-tenancy-strategy.md  (+1 more)
elyza/: __init__.py  elyza_model.py
examples/: README.md  ai_chat_example.py  rag_document_example.py  websocket_client_example.py
frontend/: README.md  package.json
integration/: __init__.py  messaging_bridge.py
k8s/: README.md
memory/: __init__.py  memory_store.py  personalization.py
middleware/: __init__.py  compression_middleware.py  prometheus_middleware.py  security_middleware.py
routes/: admin.py  avatar_management.py  batch_operations.py  chat.py  database.py  devtools.py  dictionary.py  health.py  messages.py  notifications.py  plugins.py  rag.py  search.py  settings.py  threads.py  users.py  video_chat.py  virtual_rooms.py  voice.py  wiki.py
services/: ai_service.py  auth_service.py  avatar_service.py  base.py  dictionary_service.py  elyza_service.py  emotion_detection.py  exceptions.py  file_service.py  gesture_recognition.py  message_service.py  plugin_manager.py  plugin_service.py  project_service.py  settings_service.py  utils.py  virtual_room_service.py  webrtc_service.py  wiki_service.py
templates/: index.html
tests/: conftest.py  test_dictionary.py  test_elyza.py  test_message_service.py  test_wiki.py
utils/: __init__.py  env_utils.py  id_utils.py
voice/: __init__.py  audio_processor.py  text_to_speech.py  transcription.py
websocket/: handlers.py  manager.py
workflow/: __init__.py  automation_pipeline.py
workspace/: WORKSPACE.md
(+55 files in other folders)
