[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-system"
version = "1.0.0"
description = "Universal Chat System with AI Integration, RAG, and Enterprise Features"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Thomas Heisig"}
]
keywords = ["chat", "ai", "rag", "websocket", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "slowapi>=0.1.9",
    "psutil>=5.9.6",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]
rag = [
    "chromadb>=0.4.0,<2.0.0",
    "sentence-transformers>=2.2.0",
]
mongodb = [
    "motor>=3.3.0",
    "pymongo>=4.0.0",
]
redis = [
    "redis>=5.0.0",
    "hiredis>=2.0.0",
    "aiocache>=0.12.0",
]
celery = [
    "celery>=5.3.0",
]
file-processing = [
    "python-magic>=0.4.27",
    "pillow>=10.0.0",
    "pypdf>=3.15.0",
    "python-docx>=1.1.0",
]
email = [
    "aiosmtplib>=3.0.0",
    "email-validator>=2.0.0",
]
monitoring = [
    "structlog>=23.0.0",
    "sentry-sdk>=1.35.0",
    "prometheus-client>=0.17.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
all = [
    "chat-system[ai,rag,mongodb,redis,celery,file-processing,email,monitoring,dev]",
]

[project.urls]
Homepage = "https://github.com/Thomas-Heisig/chat_system"
Repository = "https://github.com/Thomas-Heisig/chat_system"
Issues = "https://github.com/Thomas-Heisig/chat_system/issues"

[project.scripts]
chat-system = "main:main"

[tool.setuptools]
packages = ["config", "core", "database", "routes", "services", "utils", "websocket", "agents", "analytics", "elyza", "integration", "memory", "voice", "workflow", "workspace"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.9"
# Strict mode configuration - enabled progressively
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = false  # TODO: Enable after fixing untyped functions
disallow_untyped_defs = false  # TODO: Enable after adding type annotations
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unreachable = true
ignore_missing_imports = true  # Keep for third-party libraries without stubs

# Per-module options for gradual typing
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
max-complexity = 10
